2021-06-23  Chris Dumez  <cdumez@apple.com>

        REGRESSION (r279169?): [MacOS] imported/w3c/web-platform-tests/html/semantics/embedded-content/the-video-element/video_timeupdate_on_seek.html is consistently failing.
        https://bugs.webkit.org/show_bug.cgi?id=227312
        <rdar://problem/79684170>

        Unreviewed, update python script used by the test to be compatible with the new WPT tools (updated in r279169).

        * web-platform-tests/html/semantics/embedded-content/the-video-element/timeout_on_seek.py:
        (main):

2021-06-23  Chris Dumez  <cdumez@apple.com>

        Update WPT tools from upstream
        https://bugs.webkit.org/show_bug.cgi?id=227255

        Reviewed by Jonathan Bedard.

        Update WPT tools from upstream 94d018bb5d7c0d46df7ba1.

        * web-platform-tests/tools/*: Updated.

2021-06-22  Cathie Chen  <cathiechen@igalia.com>

        Implement width and height attributes on source elements of <picture>
        https://bugs.webkit.org/show_bug.cgi?id=222368

        Reviewed by Darin Adler.

        * web-platform-tests/html/rendering/replaced-elements/attributes-for-embedded-content-and-images/picture-aspect-ratio-expected.txt:

2021-06-21  Chris Dumez  <cdumez@apple.com>

        Adjust `fetch` port blocking for ports 990, 989
        https://bugs.webkit.org/show_bug.cgi?id=226971
        <rdar://problem/79287147>

        Reviewed by Geoffrey Garen.

        Re-sync some WPT tests from upstream d41f24fb67a2d65c to gain test coverage from:
        - https://github.com/web-platform-tests/wpt/pull/29343

        * web-platform-tests/fetch/api/request/request-bad-port.any-expected.txt:
        * web-platform-tests/fetch/api/request/request-bad-port.any.js:
        * web-platform-tests/fetch/api/request/request-bad-port.any.worker-expected.txt:
        * web-platform-tests/tools/wptserve/wptserve/utils.py:
        (isomorphic_decode):
        (isomorphic_encode):
        (is_bad_port):
        (http2_compatible):